# django_homework

./: README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_of_views_and_more.py  0003_alter_blog_count_of_views.py
blog/templates/blog/: base.html  blog.html  home.html
blog/templates/blog/includes/: inc_menu.html
catalog/: forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_description_and_more.py
catalog/templates/: product_detail.html  product_information.html
catalog/templates/catalog/: base.html  contacts.html  product_create.html  product_delete.html  product_detail.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_groups.py  createadmin.py
users/migrations/: 0001_initial.py
