[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["macbook <kriukov@pos-credir.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^10.4.0"
ipython = "^8.27.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = 'git'


[tool.isort]
line_length = 119

[tool.mypy]
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = 'venv'